// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProjectItem /> should render correctly 1`] = `
[
  <div
    className="sc-bcXGCL eEZeZH toasts-container toasts-container--top"
  />,
  <td
    className="sc-bcXGCL lpgNFi cap-table__td"
    style={
      {
        "whiteSpace": "initial",
      }
    }
  >
    <div
      className="sc-bcXGCL eQUJjL"
    >
      <a
        className="sc-bcXGCL cwEAzx cap-link"
        href="https://capco.dev/admin/alpha/project/project2/edit?_sonata_admin=capco_admin.admin.project&_sonata_name=admin_capco_app_project_edit&_locale=fr-FR"
      >
        Stratégie technologique de l'Etat et services publics
      </a>
      <div
        className="sc-bcXGCL hxRyWs"
      >
        <a
          className="sc-bcXGCL fOKoDi cap-link"
          href="https://capco.dev/themes/immobilier?_locale=fr-FR"
        >
          Immobilier
        </a>
        <span>
          ,   
        </span>
        <a
          className="sc-bcXGCL fOKoDi cap-link"
          href="https://capco.dev/themes/transport?_locale=fr-FR"
        >
          Transport
        </a>
      </div>
    </div>
  </td>,
  <td
    className="sc-bcXGCL lpgNFi cap-table__td"
    style={
      {
        "whiteSpace": "initial",
      }
    }
  >
    <a
      className="sc-bcXGCL cwEAzx cap-link"
      href="<mock-value-for-field-"url">"
    >
      &lt;mock-value-for-field-"username"&gt;
    </a>
  </td>,
  <td
    className="sc-bcXGCL lpgNFi cap-table__td"
    style={
      {
        "whiteSpace": "initial",
      }
    }
  >
    <div
      aria-label="Tag public-everybody"
      className="sc-bcXGCL frEEJM cap-tag"
      onBlur={[Function]}
      onFocus={[Function]}
      tabIndex={-1}
      title="public-everybody"
    >
      public-everybody
    </div>
  </td>,
  <td
    className="sc-bcXGCL lpgNFi cap-table__td"
    style={
      {
        "whiteSpace": "initial",
      }
    }
  >
    30/12/2014
  </td>,
  <td
    className="sc-bcXGCL lpgNFi cap-table__td"
    style={
      {
        "whiteSpace": "initial",
      }
    }
  >
    <button
      aria-controls="id-g"
      aria-describedby="id-g"
      aria-expanded={false}
      aria-haspopup="menu"
      aria-label="global.plus"
      className="sc-bcXGCL hluKno cap-buttonQuickAction cap-menu__disclosure"
      onBlur={[Function]}
      onClick={[Function]}
      onClickCapture={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPressCapture={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseDownCapture={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      type="button"
    >
      <svg
        aria-hidden="true"
        className="sc-bcXGCL sc-oZHua WsfA-d hQQZty cap-icon cap-buttonQuickAction-icon"
        fill="currentColor"
        height="1em"
        viewBox="0 0 12 4"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 2.087a1.304 1.304 0 1 0 2.609 0 1.304 1.304 0 0 0-2.609 0M4.696 2.087a1.304 1.304 0 1 0 2.609 0 1.304 1.304 0 0 0-2.61 0M9.391 2.087a1.304 1.304 0 1 0 2.61 0 1.304 1.304 0 0 0-2.61 0"
        />
      </svg>
    </button>
    <div
      className="cap-tooltip-container"
      hidden={true}
      id="id-g"
      onAnimationEnd={[Function]}
      onTransitionEnd={[Function]}
      role="tooltip"
      style={
        {
          "display": "none",
          "left": "100%",
          "pointerEvents": "none",
          "position": "fixed",
          "top": "100%",
          "zIndex": 1800,
        }
      }
    />
    <div
      aria-orientation="vertical"
      className="sc-bcXGCL bVeduZ sc-fvEvfv cap-menu__list"
      data-dialog={true}
      hidden={true}
      id="id-g"
      onAnimationEnd={[Function]}
      onBlur={[Function]}
      onBlurCapture={[Function]}
      onFocus={[Function]}
      onFocusCapture={[Function]}
      onKeyDown={[Function]}
      onKeyDownCapture={[Function]}
      onKeyUpCapture={[Function]}
      onTransitionEnd={[Function]}
      role="menu"
      style={
        {
          "display": "none",
          "left": "100%",
          "opacity": 0,
          "position": "fixed",
          "top": "100%",
        }
      }
      tabIndex={-1}
    >
      <button
        className="sc-bcXGCL TXmLf cap-menu__item"
        id="id-g"
        onBlurCapture={[Function]}
        onClick={[Function]}
        onClickCapture={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPressCapture={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseDownCapture={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseMove={[Function]}
        role="menuitem"
        tabIndex={0}
        type="button"
      >
        <p
          className="sc-bcXGCL cvCRpc cap-text"
        >
           
          action_show
           
        </p>
      </button>
      <button
        aria-controls="id-g"
        aria-expanded={false}
        aria-haspopup="dialog"
        className="sc-bcXGCL TXmLf cap-menu__item"
        id="id-g"
        onBlurCapture={[Function]}
        onClick={[Function]}
        onClickCapture={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPressCapture={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseDownCapture={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseMove={[Function]}
        role="menuitem"
        tabIndex={0}
        type="button"
      >
        <p
          className="sc-bcXGCL cvCRpc cap-text"
        >
           
          project.download.button
           
        </p>
      </button>
      <div
        aria-label="delete-confirmation"
        aria-modal={true}
        data-dialog={true}
        hidden={true}
        id="id-g"
        onAnimationEnd={[Function]}
        onBlur={[Function]}
        onKeyDown={[Function]}
        onTransitionEnd={[Function]}
        role="dialog"
        style={
          {
            "display": "none",
          }
        }
        tabIndex={-1}
      />
      <button
        aria-controls="id-g"
        aria-expanded={false}
        aria-haspopup="dialog"
        className="sc-bcXGCL TXmLf cap-menu__item"
        id="id-g"
        onBlurCapture={[Function]}
        onClick={[Function]}
        onClickCapture={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPressCapture={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseDownCapture={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseMove={[Function]}
        role="menuitem"
        tabIndex={0}
        type="button"
      >
        <p
          className="sc-bcXGCL cvCRpc cap-text"
        >
           
          admin.global.delete
           
        </p>
      </button>
      <div
        aria-label="delete-confirmation"
        aria-modal={true}
        data-dialog={true}
        hidden={true}
        id="id-g"
        onAnimationEnd={[Function]}
        onBlur={[Function]}
        onKeyDown={[Function]}
        onTransitionEnd={[Function]}
        role="dialog"
        style={
          {
            "display": "none",
          }
        }
        tabIndex={-1}
      />
    </div>
  </td>,
]
`;

exports[`<ProjectItem /> should render correctly without authors 1`] = `
[
  <div
    className="sc-bcXGCL eEZeZH toasts-container toasts-container--top"
  />,
  <td
    className="sc-bcXGCL lpgNFi cap-table__td"
    style={
      {
        "whiteSpace": "initial",
      }
    }
  >
    <div
      className="sc-bcXGCL eQUJjL"
    >
      <a
        className="sc-bcXGCL cwEAzx cap-link"
        href="https://capco.dev/admin/alpha/project/project2/edit?_sonata_admin=capco_admin.admin.project&_sonata_name=admin_capco_app_project_edit&_locale=fr-FR"
      >
        Stratégie technologique de l'Etat et services publics
      </a>
      <div
        className="sc-bcXGCL hxRyWs"
      >
        <a
          className="sc-bcXGCL fOKoDi cap-link"
          href="https://capco.dev/themes/immobilier?_locale=fr-FR"
        >
          Immobilier
        </a>
        <span>
          ,   
        </span>
        <a
          className="sc-bcXGCL fOKoDi cap-link"
          href="https://capco.dev/themes/transport?_locale=fr-FR"
        >
          Transport
        </a>
      </div>
    </div>
  </td>,
  <td
    className="sc-bcXGCL lpgNFi cap-table__td"
    style={
      {
        "whiteSpace": "initial",
      }
    }
  >
    <a
      className="sc-bcXGCL cwEAzx cap-link"
      href="<mock-value-for-field-"url">"
    >
      &lt;mock-value-for-field-"username"&gt;
    </a>
  </td>,
  <td
    className="sc-bcXGCL lpgNFi cap-table__td"
    style={
      {
        "whiteSpace": "initial",
      }
    }
  >
    <div
      aria-label="Tag public-everybody"
      className="sc-bcXGCL frEEJM cap-tag"
      onBlur={[Function]}
      onFocus={[Function]}
      tabIndex={-1}
      title="public-everybody"
    >
      public-everybody
    </div>
  </td>,
  <td
    className="sc-bcXGCL lpgNFi cap-table__td"
    style={
      {
        "whiteSpace": "initial",
      }
    }
  >
    30/12/2014
  </td>,
  <td
    className="sc-bcXGCL lpgNFi cap-table__td"
    style={
      {
        "whiteSpace": "initial",
      }
    }
  >
    <button
      aria-controls="id-g"
      aria-describedby="id-g"
      aria-expanded={false}
      aria-haspopup="menu"
      aria-label="global.plus"
      className="sc-bcXGCL hluKno cap-buttonQuickAction cap-menu__disclosure"
      onBlur={[Function]}
      onClick={[Function]}
      onClickCapture={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPressCapture={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseDownCapture={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      type="button"
    >
      <svg
        aria-hidden="true"
        className="sc-bcXGCL sc-oZHua WsfA-d hQQZty cap-icon cap-buttonQuickAction-icon"
        fill="currentColor"
        height="1em"
        viewBox="0 0 12 4"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 2.087a1.304 1.304 0 1 0 2.609 0 1.304 1.304 0 0 0-2.609 0M4.696 2.087a1.304 1.304 0 1 0 2.609 0 1.304 1.304 0 0 0-2.61 0M9.391 2.087a1.304 1.304 0 1 0 2.61 0 1.304 1.304 0 0 0-2.61 0"
        />
      </svg>
    </button>
    <div
      className="cap-tooltip-container"
      hidden={true}
      id="id-g"
      onAnimationEnd={[Function]}
      onTransitionEnd={[Function]}
      role="tooltip"
      style={
        {
          "display": "none",
          "left": "100%",
          "pointerEvents": "none",
          "position": "fixed",
          "top": "100%",
          "zIndex": 1800,
        }
      }
    />
    <div
      aria-orientation="vertical"
      className="sc-bcXGCL bVeduZ sc-fvEvfv cap-menu__list"
      data-dialog={true}
      hidden={true}
      id="id-g"
      onAnimationEnd={[Function]}
      onBlur={[Function]}
      onBlurCapture={[Function]}
      onFocus={[Function]}
      onFocusCapture={[Function]}
      onKeyDown={[Function]}
      onKeyDownCapture={[Function]}
      onKeyUpCapture={[Function]}
      onTransitionEnd={[Function]}
      role="menu"
      style={
        {
          "display": "none",
          "left": "100%",
          "opacity": 0,
          "position": "fixed",
          "top": "100%",
        }
      }
      tabIndex={-1}
    >
      <button
        className="sc-bcXGCL TXmLf cap-menu__item"
        id="id-g"
        onBlurCapture={[Function]}
        onClick={[Function]}
        onClickCapture={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPressCapture={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseDownCapture={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseMove={[Function]}
        role="menuitem"
        tabIndex={0}
        type="button"
      >
        <p
          className="sc-bcXGCL cvCRpc cap-text"
        >
           
          action_show
           
        </p>
      </button>
      <button
        aria-controls="id-g"
        aria-expanded={false}
        aria-haspopup="dialog"
        className="sc-bcXGCL TXmLf cap-menu__item"
        id="id-g"
        onBlurCapture={[Function]}
        onClick={[Function]}
        onClickCapture={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPressCapture={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseDownCapture={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseMove={[Function]}
        role="menuitem"
        tabIndex={0}
        type="button"
      >
        <p
          className="sc-bcXGCL cvCRpc cap-text"
        >
           
          project.download.button
           
        </p>
      </button>
      <div
        aria-label="delete-confirmation"
        aria-modal={true}
        data-dialog={true}
        hidden={true}
        id="id-g"
        onAnimationEnd={[Function]}
        onBlur={[Function]}
        onKeyDown={[Function]}
        onTransitionEnd={[Function]}
        role="dialog"
        style={
          {
            "display": "none",
          }
        }
        tabIndex={-1}
      />
      <button
        aria-controls="id-g"
        aria-expanded={false}
        aria-haspopup="dialog"
        className="sc-bcXGCL TXmLf cap-menu__item"
        id="id-g"
        onBlurCapture={[Function]}
        onClick={[Function]}
        onClickCapture={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPressCapture={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseDownCapture={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseMove={[Function]}
        role="menuitem"
        tabIndex={0}
        type="button"
      >
        <p
          className="sc-bcXGCL cvCRpc cap-text"
        >
           
          admin.global.delete
           
        </p>
      </button>
      <div
        aria-label="delete-confirmation"
        aria-modal={true}
        data-dialog={true}
        hidden={true}
        id="id-g"
        onAnimationEnd={[Function]}
        onBlur={[Function]}
        onKeyDown={[Function]}
        onTransitionEnd={[Function]}
        role="dialog"
        style={
          {
            "display": "none",
          }
        }
        tabIndex={-1}
      />
    </div>
  </td>,
]
`;

exports[`<ProjectItem /> should render correctly without exportable steps 1`] = `
[
  <div
    className="sc-bcXGCL eEZeZH toasts-container toasts-container--top"
  />,
  <td
    className="sc-bcXGCL lpgNFi cap-table__td"
    style={
      {
        "whiteSpace": "initial",
      }
    }
  >
    <div
      className="sc-bcXGCL eQUJjL"
    >
      <a
        className="sc-bcXGCL cwEAzx cap-link"
        href="https://capco.dev/admin/alpha/project/project2/edit?_sonata_admin=capco_admin.admin.project&_sonata_name=admin_capco_app_project_edit&_locale=fr-FR"
      >
        Stratégie technologique de l'Etat et services publics
      </a>
      <div
        className="sc-bcXGCL hxRyWs"
      >
        <a
          className="sc-bcXGCL fOKoDi cap-link"
          href="https://capco.dev/themes/immobilier?_locale=fr-FR"
        >
          Immobilier
        </a>
        <span>
          ,   
        </span>
        <a
          className="sc-bcXGCL fOKoDi cap-link"
          href="https://capco.dev/themes/transport?_locale=fr-FR"
        >
          Transport
        </a>
      </div>
    </div>
  </td>,
  <td
    className="sc-bcXGCL lpgNFi cap-table__td"
    style={
      {
        "whiteSpace": "initial",
      }
    }
  >
    <a
      className="sc-bcXGCL cwEAzx cap-link"
      href="<mock-value-for-field-"url">"
    >
      &lt;mock-value-for-field-"username"&gt;
    </a>
  </td>,
  <td
    className="sc-bcXGCL lpgNFi cap-table__td"
    style={
      {
        "whiteSpace": "initial",
      }
    }
  >
    <div
      aria-label="Tag public-everybody"
      className="sc-bcXGCL frEEJM cap-tag"
      onBlur={[Function]}
      onFocus={[Function]}
      tabIndex={-1}
      title="public-everybody"
    >
      public-everybody
    </div>
  </td>,
  <td
    className="sc-bcXGCL lpgNFi cap-table__td"
    style={
      {
        "whiteSpace": "initial",
      }
    }
  >
    30/12/2014
  </td>,
  <td
    className="sc-bcXGCL lpgNFi cap-table__td"
    style={
      {
        "whiteSpace": "initial",
      }
    }
  >
    <button
      aria-controls="id-g"
      aria-describedby="id-g"
      aria-expanded={false}
      aria-haspopup="menu"
      aria-label="global.plus"
      className="sc-bcXGCL hluKno cap-buttonQuickAction cap-menu__disclosure"
      onBlur={[Function]}
      onClick={[Function]}
      onClickCapture={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPressCapture={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseDownCapture={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      type="button"
    >
      <svg
        aria-hidden="true"
        className="sc-bcXGCL sc-oZHua WsfA-d hQQZty cap-icon cap-buttonQuickAction-icon"
        fill="currentColor"
        height="1em"
        viewBox="0 0 12 4"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 2.087a1.304 1.304 0 1 0 2.609 0 1.304 1.304 0 0 0-2.609 0M4.696 2.087a1.304 1.304 0 1 0 2.609 0 1.304 1.304 0 0 0-2.61 0M9.391 2.087a1.304 1.304 0 1 0 2.61 0 1.304 1.304 0 0 0-2.61 0"
        />
      </svg>
    </button>
    <div
      className="cap-tooltip-container"
      hidden={true}
      id="id-g"
      onAnimationEnd={[Function]}
      onTransitionEnd={[Function]}
      role="tooltip"
      style={
        {
          "display": "none",
          "left": "100%",
          "pointerEvents": "none",
          "position": "fixed",
          "top": "100%",
          "zIndex": 1800,
        }
      }
    />
    <div
      aria-orientation="vertical"
      className="sc-bcXGCL bVeduZ sc-fvEvfv cap-menu__list"
      data-dialog={true}
      hidden={true}
      id="id-g"
      onAnimationEnd={[Function]}
      onBlur={[Function]}
      onBlurCapture={[Function]}
      onFocus={[Function]}
      onFocusCapture={[Function]}
      onKeyDown={[Function]}
      onKeyDownCapture={[Function]}
      onKeyUpCapture={[Function]}
      onTransitionEnd={[Function]}
      role="menu"
      style={
        {
          "display": "none",
          "left": "100%",
          "opacity": 0,
          "position": "fixed",
          "top": "100%",
        }
      }
      tabIndex={-1}
    >
      <button
        className="sc-bcXGCL TXmLf cap-menu__item"
        id="id-g"
        onBlurCapture={[Function]}
        onClick={[Function]}
        onClickCapture={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPressCapture={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseDownCapture={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseMove={[Function]}
        role="menuitem"
        tabIndex={0}
        type="button"
      >
        <p
          className="sc-bcXGCL cvCRpc cap-text"
        >
           
          action_show
           
        </p>
      </button>
      <button
        aria-controls="id-g"
        aria-expanded={false}
        aria-haspopup="dialog"
        className="sc-bcXGCL TXmLf cap-menu__item"
        id="id-g"
        onBlurCapture={[Function]}
        onClick={[Function]}
        onClickCapture={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPressCapture={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseDownCapture={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseMove={[Function]}
        role="menuitem"
        tabIndex={0}
        type="button"
      >
        <p
          className="sc-bcXGCL cvCRpc cap-text"
        >
           
          admin.global.delete
           
        </p>
      </button>
      <div
        aria-label="delete-confirmation"
        aria-modal={true}
        data-dialog={true}
        hidden={true}
        id="id-g"
        onAnimationEnd={[Function]}
        onBlur={[Function]}
        onKeyDown={[Function]}
        onTransitionEnd={[Function]}
        role="dialog"
        style={
          {
            "display": "none",
          }
        }
        tabIndex={-1}
      />
    </div>
  </td>,
]
`;

exports[`<ProjectItem /> should render correctly without themes 1`] = `
[
  <div
    className="sc-bcXGCL eEZeZH toasts-container toasts-container--top"
  />,
  <td
    className="sc-bcXGCL lpgNFi cap-table__td"
    style={
      {
        "whiteSpace": "initial",
      }
    }
  >
    <div
      className="sc-bcXGCL eQUJjL"
    >
      <a
        className="sc-bcXGCL cwEAzx cap-link"
        href="https://capco.dev/admin/alpha/project/project2/edit?_sonata_admin=capco_admin.admin.project&_sonata_name=admin_capco_app_project_edit&_locale=fr-FR"
      >
        Stratégie technologique de l'Etat et services publics
      </a>
      <div
        className="sc-bcXGCL hxRyWs"
      />
    </div>
  </td>,
  <td
    className="sc-bcXGCL lpgNFi cap-table__td"
    style={
      {
        "whiteSpace": "initial",
      }
    }
  >
    <a
      className="sc-bcXGCL cwEAzx cap-link"
      href="<mock-value-for-field-"url">"
    >
      &lt;mock-value-for-field-"username"&gt;
    </a>
  </td>,
  <td
    className="sc-bcXGCL lpgNFi cap-table__td"
    style={
      {
        "whiteSpace": "initial",
      }
    }
  >
    <div
      aria-label="Tag public-everybody"
      className="sc-bcXGCL frEEJM cap-tag"
      onBlur={[Function]}
      onFocus={[Function]}
      tabIndex={-1}
      title="public-everybody"
    >
      public-everybody
    </div>
  </td>,
  <td
    className="sc-bcXGCL lpgNFi cap-table__td"
    style={
      {
        "whiteSpace": "initial",
      }
    }
  >
    30/12/2014
  </td>,
  <td
    className="sc-bcXGCL lpgNFi cap-table__td"
    style={
      {
        "whiteSpace": "initial",
      }
    }
  >
    <button
      aria-controls="id-g"
      aria-describedby="id-g"
      aria-expanded={false}
      aria-haspopup="menu"
      aria-label="global.plus"
      className="sc-bcXGCL hluKno cap-buttonQuickAction cap-menu__disclosure"
      onBlur={[Function]}
      onClick={[Function]}
      onClickCapture={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPressCapture={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseDownCapture={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      type="button"
    >
      <svg
        aria-hidden="true"
        className="sc-bcXGCL sc-oZHua WsfA-d hQQZty cap-icon cap-buttonQuickAction-icon"
        fill="currentColor"
        height="1em"
        viewBox="0 0 12 4"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 2.087a1.304 1.304 0 1 0 2.609 0 1.304 1.304 0 0 0-2.609 0M4.696 2.087a1.304 1.304 0 1 0 2.609 0 1.304 1.304 0 0 0-2.61 0M9.391 2.087a1.304 1.304 0 1 0 2.61 0 1.304 1.304 0 0 0-2.61 0"
        />
      </svg>
    </button>
    <div
      className="cap-tooltip-container"
      hidden={true}
      id="id-g"
      onAnimationEnd={[Function]}
      onTransitionEnd={[Function]}
      role="tooltip"
      style={
        {
          "display": "none",
          "left": "100%",
          "pointerEvents": "none",
          "position": "fixed",
          "top": "100%",
          "zIndex": 1800,
        }
      }
    />
    <div
      aria-orientation="vertical"
      className="sc-bcXGCL bVeduZ sc-fvEvfv cap-menu__list"
      data-dialog={true}
      hidden={true}
      id="id-g"
      onAnimationEnd={[Function]}
      onBlur={[Function]}
      onBlurCapture={[Function]}
      onFocus={[Function]}
      onFocusCapture={[Function]}
      onKeyDown={[Function]}
      onKeyDownCapture={[Function]}
      onKeyUpCapture={[Function]}
      onTransitionEnd={[Function]}
      role="menu"
      style={
        {
          "display": "none",
          "left": "100%",
          "opacity": 0,
          "position": "fixed",
          "top": "100%",
        }
      }
      tabIndex={-1}
    >
      <button
        className="sc-bcXGCL TXmLf cap-menu__item"
        id="id-g"
        onBlurCapture={[Function]}
        onClick={[Function]}
        onClickCapture={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPressCapture={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseDownCapture={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseMove={[Function]}
        role="menuitem"
        tabIndex={0}
        type="button"
      >
        <p
          className="sc-bcXGCL cvCRpc cap-text"
        >
           
          action_show
           
        </p>
      </button>
      <button
        aria-controls="id-g"
        aria-expanded={false}
        aria-haspopup="dialog"
        className="sc-bcXGCL TXmLf cap-menu__item"
        id="id-g"
        onBlurCapture={[Function]}
        onClick={[Function]}
        onClickCapture={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPressCapture={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseDownCapture={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseMove={[Function]}
        role="menuitem"
        tabIndex={0}
        type="button"
      >
        <p
          className="sc-bcXGCL cvCRpc cap-text"
        >
           
          project.download.button
           
        </p>
      </button>
      <div
        aria-label="delete-confirmation"
        aria-modal={true}
        data-dialog={true}
        hidden={true}
        id="id-g"
        onAnimationEnd={[Function]}
        onBlur={[Function]}
        onKeyDown={[Function]}
        onTransitionEnd={[Function]}
        role="dialog"
        style={
          {
            "display": "none",
          }
        }
        tabIndex={-1}
      />
      <button
        aria-controls="id-g"
        aria-expanded={false}
        aria-haspopup="dialog"
        className="sc-bcXGCL TXmLf cap-menu__item"
        id="id-g"
        onBlurCapture={[Function]}
        onClick={[Function]}
        onClickCapture={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPressCapture={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseDownCapture={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseMove={[Function]}
        role="menuitem"
        tabIndex={0}
        type="button"
      >
        <p
          className="sc-bcXGCL cvCRpc cap-text"
        >
           
          admin.global.delete
           
        </p>
      </button>
      <div
        aria-label="delete-confirmation"
        aria-modal={true}
        data-dialog={true}
        hidden={true}
        id="id-g"
        onAnimationEnd={[Function]}
        onBlur={[Function]}
        onKeyDown={[Function]}
        onTransitionEnd={[Function]}
        role="dialog"
        style={
          {
            "display": "none",
          }
        }
        tabIndex={-1}
      />
    </div>
  </td>,
]
`;
